Subiendo mi proyecto Angular

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -323,14 +323,12 @@
     </div>
   </div>
 </main>
+<nav>
+  <a routerLink="/">Inicio</a> |
+  <a routerLink="/formulario">Formulario</a>
+</nav>
+<router-outlet></router-outlet>
 
-<!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
-<!-- * * * * * * * * * * * The content above * * * * * * * * * * * * -->
-<!-- * * * * * * * * * * is only a placeholder * * * * * * * * * * * -->
-<!-- * * * * * * * * * * and can be replaced.  * * * * * * * * * * * -->
-<!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
-<!-- * * * * * * * * * * End of Placeholder  * * * * * * * * * * * * -->
-<!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 
 
 <router-outlet />
